Change to Lombok for view beans and entities. Adds add-payment-reference.html. Wee report data label change.